# realtime-parallel-kmeans-segmentation

./: .gitignore  CMakeLists.txt  README.md
docs/: algorithms.md  parallelization.md  performance.md
gpu/: clustering_cuda.cpp  clustering_cuda.cu
include/: clustering.hpp  clustering_backends.hpp  coreset.hpp  rcc.hpp  threadpool.hpp  utils.hpp  video_io.hpp
mpi/: clustering_mpi.cpp
seq/: clustering_seq.cpp
src/: clustering.cpp  coreset.cpp  main.cpp  rcc.cpp  utils.cpp  video_io.cpp
src/clustering/: clustering_cuda.cu  clustering_entry.cpp  clustering_mpi.cpp  clustering_seq.cpp  clustering_thr.cpp  clustering_thrpool.cpp
tests/: test_clustering.cpp  test_coreset.cpp  test_rcc.cpp  test_utils.cpp  test_video_io.cpp
threads/: clustering_thr.cpp
